# evolve

./: Cargo.toml
.github/workflows/: benchmark.yaml
benches/: one_max_problem.rs
book/: book.toml
book/src/: SUMMARY.md
book/src/agents/: evaluation-caching.md  expensive-evaluation.md
examples/: knapsack.rs  one_max_problem.rs
src/: agent.rs  hall_of_fame.rs  lib.rs  simulation.rs  stats.rs
src/simulator/: basic.rs  mod.rs  multithreaded.rs
